[package]
name = "goosy-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.17.14"
solana-sdk = "1.17.14"
tokio = "1.35.1"
anchor-client = "0.29.0"
dotenv = "0.15.0"
spl-associated-token-account = "2.3.0"
spl-token = "4.0.0"
bincode = "1.3.3"
goosy-vault = { path = "../programs/goosy-vault" }
borsh = "1.3.0"